      filename for performance.
    * Asynchrounous operation in message DB for better performance with very large DBs
    * Tidy and revive intervals in cacher is calculated from the last
      completion of each of these processes.
    * Show IP address of remote host in error message when array data parsing
      fails in IP module

  * Fixes:
    * Prevent HTTP client from getting killed of if there are a lot of
      connection errors
    * Deadlock in mmap channel due to incorrect use of lock() instead of trylock()
    * Lockup in cmodules in high traffic situations
    * Sometimes temporary lockup in HTTP-server if there is not immediate downstream
      response to an h2c upgrade.
    * Poor hard timeout management in MQTT broker causing low-traffic clients to be kicked
    * Fix buffer overflow in httpclient when wide characters were given to an
      urlencoder function.
    * Fix random crashes in message DB when zero length files were found.

  * Under the hood:
    * Cleanups in MQTT framework
    * Cleanups in net transport framework

 -- Atle Solbakken <atle@goliathdns.no>  Wed, 23 Feb 2022 00:43:10 +0100

rrr (1.21-1) bullseye; urgency=medium

  * Changes:
    * Automatic restart of RRR deamon upon failure
    * Use JEmalloc instead of internal allocator

  * Features:
    * Option in cacher to revive messages older than a specified age
    * Control maximum response size in httpclient
    * Control maximum request size in httpserver
    * Control content-type for raw requests in httpclient
    * Control which readers that will receive the different kinds of messages from cacher

  * Improvements:
    * Performance for larger messages in misc. modules

  * Fixes:
    * Busy-waiting on thread state change causing long startup times
    * Cacher getting killed off on large writes to message DB
    * Large messages sometimes failing to be sent due to incorrect
      return values in some send functions