@@ -1,6 +1,7 @@
 [instance_httpserver]
 module=httpserver
 http_server_port_plain=8000
+http_server_allow_origin_header=*
 http_server_fields_accept_any=yes
 http_server_receive_full_request=yes
 http_server_no_body_parse=no
