@@ -636,6 +636,27 @@ static void httpserver_response_data_destroy_void (
 	httpserver_response_data_destroy(data);
 }
 
+struct httpserver_field_value_search_callback_data {
+	const char *name;
+	const struct rrr_nullsafe_str *result;
+};
+		
+static int httpserver_field_value_search_callback (
+		const struct rrr_nullsafe_str *name,
+		const struct rrr_nullsafe_str *value,
+		const struct rrr_nullsafe_str *content_type,
+		void *arg
+) {
+	(void)(content_type);
+
+	struct httpserver_field_value_search_callback_data *callback_data = arg;
+	if (rrr_nullsafe_str_cmpto_case(name, callback_data->name) == 0) {
+		callback_data->result = value;
+		return RRR_READ_EOF;
+	}
+	return RRR_READ_OK;
+}
+
 static int httpserver_receive_callback_get_full_request_fields (
 		struct rrr_array *target_array,
 		struct httpserver_data *httpserver_data,
@@ -664,7 +685,7 @@ static int httpserver_receive_callback_get_full_request_fields (
 		goto out;
 	}
 
-	// http_method, http_endpoint, http_body, http_content_transfer_encoding, http_content_type
+	// http_method, http_endpoint, http_body, http_content_transfer_encoding, http_content_type, http_content_type_boundary
 
 	const struct rrr_http_header_field *content_type = rrr_http_part_header_field_get(part, "content-type");
 	const struct rrr_http_header_field *content_transfer_encoding = rrr_http_part_header_field_get(part, "content-transfer-encoding");
@@ -673,40 +694,77 @@ static int httpserver_receive_callback_get_full_request_fields (
 	ret |= rrr_array_push_value_str_with_tag_nullsafe(target_array, "http_method", part->request_method_str_nullsafe);
 	ret |= rrr_array_push_value_str_with_tag_nullsafe(target_array, "http_endpoint", part->request_uri_nullsafe);
 
+	if (ret != 0) {
+		goto out_value_error;
+	}
+
 	if (content_type != NULL && rrr_nullsafe_str_isset(content_type->value)) {
 		RRR_HTTP_UTIL_SET_TMP_NAME_FROM_NULLSAFE(value,content_type->value);
-		ret |= rrr_array_push_value_str_with_tag (
+		if ((ret = rrr_array_push_value_str_with_tag (
 				target_array,
 				"http_content_type",
 				value
-		);
+		)) != 0) {
+			goto out_value_error;
+		}
+
+		if (rrr_nullsafe_str_cmpto_case(content_type->value, "multipart/form-data") == 0) {
+			struct httpserver_field_value_search_callback_data callback_data = {
+				"boundary",
+				NULL
+			};
+
+			if ((ret = rrr_http_field_collection_iterate_as_strings (
+					&content_type->fields,
+					httpserver_field_value_search_callback,
+					&callback_data
+			)) != 0) {
+				if (ret != RRR_READ_EOF) {
+					RRR_MSG_0("Error while searching for boundary in content-type field in httpserver instance %s\n",
+							INSTANCE_D_NAME(httpserver_data->thread_data));
+					goto out;
+				}
+				if ((ret = rrr_array_push_value_str_with_tag_nullsafe(target_array, "http_content_type_boundary", callback_data.result)) != 0) {
+					RRR_MSG_0("Failed to push content-type boundary value to array in httpserver instance %s\n",
+							INSTANCE_D_NAME(httpserver_data->thread_data));
+					goto out;
+				}
+			}
+			else {
+				RRR_MSG_0("Warning: boundary directive missing in multipart/form-data content-type field in httpserver instance %s\n",
+						INSTANCE_D_NAME(httpserver_data->thread_data));
+			}
+		}
 	}
 
 	if (content_transfer_encoding != NULL && rrr_nullsafe_str_isset(content_transfer_encoding->value)) {
 		RRR_HTTP_UTIL_SET_TMP_NAME_FROM_NULLSAFE(value,content_transfer_encoding->value);
-		ret |= rrr_array_push_value_str_with_tag (
+		if ((ret = rrr_array_push_value_str_with_tag (
 				target_array,
 				"http_content_transfer_encoding",
 				value
-		);
+		)) != 0) {
+			goto out_value_error;
+		}
 	}
 
 	if (body_len > 0) {
-		ret |= rrr_array_push_value_str_with_tag_with_size (
+		if ((ret = rrr_array_push_value_str_with_tag_with_size (
 				target_array,
 				"http_body",
 				body_ptr,
 				rrr_length_from_biglength_bug_const(body_len)
-		);
+		)) != 0) {
+			goto out_value_error;
+		}
 	}
 
-	if (ret != 0) {
-		RRR_MSG_0("Failed to add full request fields in httpserver_receive_callback_get_full_request_fields\n");
-		goto out;
-	}
-
+	goto out;
+	out_value_error:
+		RRR_MSG_0("Error while pushing full request fields to array in httpserver instance %s\n",
+				INSTANCE_D_NAME(httpserver_data->thread_data));
 	out:
-	return ret;
+		return ret;
 }
 
 static int httpserver_receive_callback_get_part_fields (
